--- a/StitchLens.Web/Views/Shared/_Layout.cshtml
+++ b/StitchLens.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (User.Identity?.IsAuthenticated == true) {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyPatterns">My Patterns</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pattern" asp-action="Upload">Create Pattern</a>
                         </li>
