Add password recovery flow and secret scan hardening

--- a/StitchLens.Web/Views/Account/Login.cshtml
+++ b/StitchLens.Web/Views/Account/Login.cshtml
@@ -78,6 +78,9 @@
                             Don't have an account?
                             <a asp-action="Register" asp-route-returnUrl="@ViewData["ReturnUrl"]">Create one</a>
                         </p>
+                        <p>
+                            <a asp-action="ForgotPassword">Forgot your password?</a>
+                        </p>
                     </div>
 
                     <div class="auth-legal">
